fix(hero): gap between photo and text

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -112,6 +112,7 @@
   font-weight: 300;
   cursor: pointer;
   transition: all 0.3s ease;
+  margin-bottom: 70px;
 }
 
 .hero__icon-wrapper {
@@ -167,7 +168,6 @@
 .hero__image-wrapper {
   width: 100%;
   height: 100%;
-  max-width: 1446px;
   max-height: 858px;
   position: absolute;
   left: 50%;
